[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[project]
name = "rangestitch"
version = "0.1.0"
description = "A Python library for merging, stitching, and analyzing time intervals."
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "polars>=1.40.1",
]

[tool.setuptools.packages.find]
include = ["rangestitch*"]
